fix nav misalignment

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -92,6 +92,7 @@ body > header {
 
       @include media(">ul") {
         display: flex;
+        align-items: center;
       }
 
       li {
